--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/aliatech/loopback-mongo-aggregate-mixin.git"
   },
   "scripts": {
-    "lint": "eslint index.js",
+    "lint": "eslint lib",
+    "lint-fix": "eslint --fix lib",
     "test": "mocha",
     "test-with-coverage": "nyc --reporter=text --reporter=text-summary --reporter=html mocha",
     "publish-coverage": "nyc report --reporter=text-lcov | coveralls"
@@ -37,9 +38,9 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@aliatech/eslint-config-aliatech": "^0.1.0",
     "coveralls": "^3.0.2",
     "eslint": "^5.13.0",
-    "eslint-config-google": "^0.12.0",
     "loopback": "^3.25.0",
     "loopback-boot": "^2.27.1",
     "loopback-connector-mongodb": "^3.9.2",
