--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pipeline"
   ],
   "dependencies": {
+    "find-node-modules": "^2.0.0",
     "lodash": "^4.17.11",
     "polygoat": "^1.1.4"
   },
